# opt-pre-commit

./: .pre-commit-hooks.yaml  LICENSE  README.md  optimize-assets  package.json  pyproject.toml
.github/workflows/: test.yml
example/: .pre-commit-config.yaml
scripts/: svgo.config.js
tests/: test.sh
